# fissio

./: .gitignore  Cargo.toml  README.md  docker-compose.override.yml  docker-compose.yml
agent/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev
agent/crates/agent-config/: Cargo.toml
agent/crates/agent-config/src/: lib.rs
agent/crates/agent-core/: Cargo.toml
agent/crates/agent-core/src/: lib.rs
agent/crates/agent-engine/: Cargo.toml
agent/crates/agent-engine/src/: lib.rs
agent/crates/agent-llm/: Cargo.toml
agent/crates/agent-llm/src/: client.rs  ollama.rs
agent/crates/agent-network/: Cargo.toml
agent/crates/agent-network/src/: anthropic.rs  client.rs  lib.rs  unified.rs
agent/crates/agent-pipeline/: Cargo.toml
agent/crates/agent-pipeline/src/: evaluator.rs  frontline.rs  lib.rs  orchestrator.rs  prompts.rs  runner.rs
agent/crates/agent-pipeline/src/workers/: email.rs  general.rs  mod.rs  registry.rs  search.rs
agent/crates/agent-server/: Cargo.toml
agent/crates/agent-server/src/: db.rs  dto.rs  main.rs  ws.rs
agent/crates/agent-server/src/handlers/: mod.rs  model.rs  pipeline.rs
agent/crates/agent-server/src/services/: model.rs
agent/crates/agents-core/src/: types.rs
agent/crates/agents-llm/src/: client.rs  ollama.rs
agent/crates/agents-pipeline/src/: orchestrator.rs  runner.rs
agent/crates/agents-server/src/: state.rs  ws.rs
agent/crates/agents-server/src/services/: model.rs
agent/crates/agents-workers/src/: email.rs  search.rs
agent/data/: pipelines.db
agent/presets/: 4-orchestrator-worker.json
client/: package-lock.json  package.json  vite.config.ts
client/.svelte-kit/: non-ambient.d.ts
client/.svelte-kit/types/: route_meta_data.json
client/.svelte-kit/types/src/routes/: $types.d.ts
client/src/: app.css
client/src/lib/: types.ts
client/src/lib/components/: ChatMessage.tsx  Header.svelte  Header.tsx  PipelineEditor.svelte
client/src/lib/stores/: chat.ts
client/src/pages/: Chat.tsx
client/src/routes/: +page.svelte
client/src/routes/composer/: +page.svelte
crates/fissio-config/: Cargo.toml
crates/fissio-config/src/: lib.rs
crates/fissio-core/src/: lib.rs
crates/fissio-editor/client/src/pages/: Observe.tsx
crates/fissio-engine/: Cargo.toml
crates/fissio-engine/src/: lib.rs
crates/fissio-llm/: Cargo.toml
crates/fissio-llm/src/: anthropic.rs  client.rs  ollama.rs
crates/fissio-monitor/: Cargo.toml
crates/fissio-monitor/src/: collector.rs  lib.rs  store.rs  trace.rs
crates/fissio-server/: Cargo.toml  examples.json
crates/fissio-server/src/: db.rs  error.rs  main.rs
crates/fissio-server/src/handlers/: chat.rs  mod.rs  traces.rs
crates/fissio-server/src/services/: chat.rs  mod.rs
crates/fissio-tools/: Cargo.toml
crates/fissio/examples/: router_pipeline.rs  simple_chat.rs
crates/fissio/src/: lib.rs
fissio/: Cargo.toml  README.md
fissio/crates/fissio/: Cargo.toml
fissio/crates/fissio-config/: Cargo.toml
fissio/crates/fissio-config/src/: lib.rs
fissio/crates/fissio-core/: Cargo.toml
fissio/crates/fissio-core/src/: lib.rs
fissio/crates/fissio-editor/client/src/pages/: Chat.tsx
fissio/crates/fissio-engine/: Cargo.toml
fissio/crates/fissio-engine/src/: lib.rs
fissio/crates/fissio-llm/src/: anthropic.rs  client.rs  lib.rs  ollama.rs  unified.rs
fissio/crates/fissio-server/src/: error.rs
fissio/crates/fissio-server/src/handlers/: chat.rs  pipeline.rs
fissio/crates/fissio-server/src/services/: pipeline.rs
fissio/crates/fissio-tools/src/: lib.rs  web_search.rs
fissio/crates/fissio/examples/: builder_api.rs
fissio/crates/fissio/src/: lib.rs
frontend/: Dockerfile.dev  package.json
