[workspace]
resolver = "2"
members = [
    "crates/agent-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["hubenschmidt"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
