[package]
name = "fissio-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pipeline configuration schema for fissio"

[dependencies]
fissio-monitor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
