[package]
name = "fissio-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Observability and metrics collection for fissio pipelines"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
