[package]
name = "agent-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agent-server"
path = "src/main.rs"

[dependencies]
# Fissio framework
fissio = { path = "../../../fissio/crates/fissio" }
fissio-config = { path = "../../../fissio/crates/fissio-config" }
fissio-core = { path = "../../../fissio/crates/fissio-core" }
fissio-engine = { path = "../../../fissio/crates/fissio-engine" }
fissio-llm = { path = "../../../fissio/crates/fissio-llm" }
fissio-tools = { path = "../../../fissio/crates/fissio-tools" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Runtime & async
tokio.workspace = true
futures = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utils
dotenvy.workspace = true
uuid.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
